ETSL-953 Footer alignment fixes

--- a/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
@@ -245,14 +245,10 @@
 }
 
 .footer-links-logo-section .flex-container .footer-links-nav {
-  margin: toRem(8) 0 !important;
+  margin: toRem(12) 0 !important;
 
   @include respond-to-min($tablet) {
-    margin: toRem(15) 0 toRem(30) !important;
-  }
-
-  @include respond-to-max($tablet) {
-    padding: toRem(10) toRem(8) 0 !important;
+    margin: toRem(15) 0 toRem(8) !important;
   }
 
   @include respond-to-min($desktop) {
@@ -1127,12 +1123,14 @@
 
     &:last-child {
       a {
-        margin-right: toRem(24);
+      margin-right: 0;
       }
     }
 
     a {
       border-right: none;
+      margin-left: toRem(16);
+      margin-right: 0;
       padding-right: 0;
     }
   }
